# mvtx-zcu

./: README.md  sockit.sh
TestSystem/: Makefile  RUv2testSheet2v0.docx  ip_sources.txt  sdc_sources.txt  vhdl_sources.txt  vlog_sources.txt  vlog_sources_sim.txt
TestSystem/filelist/: sdc_sources.txt  vhdl_sources.txt
TestSystem/modules/: DEPENDENCIES
TestSystem/modules/board_support_software/: Readme.md
TestSystem/modules/board_support_software/software/cpp/: AlpideDecoder.cpp  AlpideDecoder.h  CMakeLists.txt  Readme.md  event_filter.cpp
TestSystem/modules/common_tmr/: .gitignore  README.md
TestSystem/modules/dcs_canbus/: README.md
TestSystem/modules/gbt/: README.md
TestSystem/modules/i2c/: README.md
TestSystem/modules/usb_if/: README.md
TestSystem/modules/wishbone/: .gitignore  README.md
TestSystem/software/py/: copyDB.sh  fuseGBTx.sh  initCAN.sh  initPA3I2C.sh  read_bad_blocks.py  requirements.txt  testAll.py  testBUTTON.py  testCAN.py  testFlashReadback.py  testGBT.py  testGBT1.py  testGBT2.py  testGBTlongloop.py  testGPIO.py  testGPIO.py~  testGPIO.sh  testMGT.py  testMGT.sh  testPA3I2C.py  testPowerMezzanine.py  testSCA.py  testSCA_short.py  testSelectMap.py  testbench.py  vivado_lab.jou
TestSystem/software/py/Magnus/modules/usb_if/software/usb_comm_server/: CMakeLists.txt  Readme.md  test_client.py  usb_comm.cpp  usb_comm.sln  usb_comm.vcxproj  usb_comm.vcxproj.filters
TestSystem/source/constraints/: Bitstream_settings.xdc  PinConstraints.xdc  TimingConstraints.xdc  top.xdc
TestSystem/source/rtl/: RUv1_top.vhd  clock_generator.vhd  fabric_top.vhd  fabric_top_pkg.vhd
TestSystem/vivado/: vivado.jou
TestSystem/vivado/RUv1/: RUv1.xpr
TestSystem/vivado/scripts/: add_micro.tcl  bit_gen.tcl  create_project.tcl  create_project_vivado.tcl  run_task_vivado.tcl
ZCU102_CRU/: CODEOWNERS  Makefile  ZCU102_CRU_top_210917_1536_28e30d2b.ltx  env_var.mk  vivado.jou
ZCU102_CRU/filelist/: ip_sources.txt  sdc_sources.txt  vhdl_sources.txt  vhdl_sources_sim.txt  vlog_includes.txt  vlog_sources.txt  vlog_sources_sim.txt
ZCU102_CRU/modules/: DEPENDENCIES
ZCU102_CRU/software/py/: GBTFPGAConfLIB.py  Readme.txt  SCA.py  SCA_Comm.py  VivadoLIB.py  VivadoTCPClientLib.py  XilinxGBTTester.py  driver_comm.py  test.py
ZCU102_CRU/vivado/: refresh.tcl
(+968 files in other folders)
